	  old (verbose) output can be obtained by using -v option.
	* File join has been disabled in this release, refer to Bugzilla
	  16929.
	* A new Lustre ADIO driver is available for MPICH2-1.0.7.
	* NFS export disabled when stack size < 8192. Since the NFSv4 export of 
	  Lustre filesystem with 4K stack may cause a stack overflow. For more
	  information, please refer to bugzilla 17630.

Severity   : enhancement
Bugzilla   : 17201
Description: Update to RHEL5 kernel-2.6.18-92.1.17.el5.

Severity   : normal
Frequency  : rare, need acls on inode.
Bugzilla   : 16492
Description: client can't handle ost additional correctly
Details    : if ost was added after client connected to mds client can have 
             hit lnet_try_match_md ... to big messages to wide striped files.
             in this case need teach client to handle config events about add
             lov target and update client max ea size at that event.

Severity   : enhancement
Bugzilla   : 17374
Description: Update to sles9 kernel-2.6.5-7.314.

Severity   : enhancement
Bugzilla   : 17458
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.31.

Severity   : normal
Frequency  : Create a symlink file with a very long name
Bugzilla   : 16578
Description: ldlm_cancel_pack()) ASSERTION(max >= dlm->lock_count + count)
Details    : If there is no extra space in the request for early cancels,
	     ldlm_req_handles_avail() returns 0 instead of a negative value.

Severity   : major
Frequency  : rare
Bugzilla   : 16492
Description: mds is deadlocked
Details    : in rare cases, inode in catalog can have i_no less than have parent
	     i_no, this produce wrong order for locking during open, and parallel
	     unlink can be lock open. this need teach mds_open to grab locks in
	     resource id order, not at parent -> child order.

Severity   : enhancement
Bugzilla   : 1819
Description: Add /proc entry for import status
Details    : The mdc, osc, and mgc import directories now have